--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -11,11 +11,17 @@ dependencies:
   flutter:
     sdk: flutter
   data:
-    path: ../data
+    git:
+      url: https://github.com/RomanPreis/DevPilotTemplates.git
+      path: data
   domain:
-    path: ../domain
+    git:
+      url: https://github.com/RomanPreis/DevPilotTemplates.git
+      path: domain
   navigation:
-    path: ../navigation
+    git:
+      url: https://github.com/RomanPreis/DevPilotTemplates.git
+      path: navigation
 
   get_it: ^7.2.0
   dio: ^5.1.1
@@ -28,6 +34,3 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.1
-
-flutter:
-
