--- a/core_ui/pubspec.yaml
+++ b/core_ui/pubspec.yaml
@@ -11,11 +11,17 @@ dependencies:
   flutter:
     sdk: flutter
   core:
-    path: ../core
+    git:
+      url: https://github.com/RomanPreis/DevPilotTemplates.git
+      path: core
   domain:
-    path: ../domain
+    git:
+      url: https://github.com/RomanPreis/DevPilotTemplates.git
+      path: domain
   navigation:
-    path: ../navigation
+    git:
+      url: https://github.com/RomanPreis/DevPilotTemplates.git
+      path: navigation
   flutter_svg: ^2.0.5
 
 
