--- a/domain/pubspec.yaml
+++ b/domain/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   core:
-    path: ../core
+    git:
+      url: https://github.com/RomanPreis/DevPilotTemplates.git
+      path: core
 
 
 dev_dependencies:
