--- a/navigation/pubspec.yaml
+++ b/navigation/pubspec.yaml
@@ -11,11 +11,17 @@ dependencies:
     sdk: flutter
 
   core:
-    path: ../core
+    git:
+      url: https://github.com/RomanPreis/DevPilotTemplates.git
+      path: core
   core_ui:
-    path: ../core_ui
+    git:
+      url: https://github.com/RomanPreis/DevPilotTemplates.git
+      path: core_ui
   domain:
-    path: ../domain
+    git:
+      url: https://github.com/RomanPreis/DevPilotTemplates.git
+      path: domain
 
 dev_dependencies:
   flutter_lints: 2.0.1
