--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -4,8 +4,8 @@ publish_to: none
 description: Project core module
 
 environment:
-  sdk: ">=2.17.1 <3.1.0"
-  flutter: ">=1.17.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -17,17 +17,16 @@ dependencies:
   navigation:
     path: ../navigation
 
-  get_it: ^7.2.0
-  dio: ^5.1.1
-  logger: ^1.3.0
-  flutter_bloc: ^8.1.1
-
+  get_it: ^7.6.7
+  dio: ^5.4.0
+  logger: ^2.0.2
+  flutter_bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
 
 flutter:
 
