--- a/core_ui/pubspec.yaml
+++ b/core_ui/pubspec.yaml
@@ -4,8 +4,8 @@ publish_to: none
 description: Project Core UI module
 
 environment:
-  sdk: ">=2.17.1 <3.1.0"
-  flutter: ">=1.17.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -16,13 +16,13 @@ dependencies:
     path: ../domain
   navigation:
     path: ../navigation
-  flutter_svg: ^2.0.5
+  flutter_svg: ^2.0.9
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
