--- a/data/pubspec.yaml
+++ b/data/pubspec.yaml
@@ -4,8 +4,8 @@ publish_to: none
 description: Project data module
 
 environment:
-  sdk: ">=2.17.1 <3.1.0"
-  flutter: ">=1.17.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -19,9 +19,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
-
-  build_runner: '>2.3.0 <4.0.0'
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.8
 
 
 flutter:
