--- a/navigation/pubspec.yaml
+++ b/navigation/pubspec.yaml
@@ -2,11 +2,11 @@ name: navigation
 publish_to: none
 
 environment:
-  sdk: ">=2.17.1 <3.1.0"
-  flutter: ">=3.0.1"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.0.0 <4.0.0'
 
 dependencies:
-  auto_route: ^5.0.4
+  auto_route: ^7.8.4
   flutter:
     sdk: flutter
 
@@ -18,7 +18,6 @@ dependencies:
     path: ../domain
 
 dev_dependencies:
-  flutter_lints: 2.0.1
-  dart_code_metrics: 5.5.1
-  auto_route_generator: 5.0.3
-  build_runner: 2.3.3
+  flutter_lints: ^3.0.1
+  auto_route_generator: ^7.3.2
+  build_runner: ^2.4.8
