--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   dio: ^5.4.0
   logger: ^2.0.2
   flutter_bloc: ^8.1.4
+  observe_internet_connectivity: ^1.0.2
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
