--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   observe_internet_connectivity: ^1.0.2
   http: ^1.2.1
+  easy_localization: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -25,4 +26,5 @@ dev_dependencies:
   flutter_lints: ^3.0.1
 
 flutter:
-
+  assets:
+    - resources/lang/
