--- a/feature/pubspec.yaml
+++ b/feature/pubspec.yaml
@@ -1,5 +1,5 @@
 name: plug
-description: Home feature
+description: plug feature
 version: 0.0.1
 publish_to: none
 
@@ -24,5 +24,5 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  auto_route_generator: ^7.3.2
+  auto_route_generator: ^9.0.0
   build_runner: ^2.4.8
